--- a/templates/testing/quiz.html
+++ b/templates/testing/quiz.html
@@ -1,1 +1,13 @@
-<iframe src="https://docs.google.com/forms/d/e/1FAIpQLScuvb9VTX8zbF09wzABWF0z1-E3H2c-EqnUL22SP_yDBtg0vQ/viewform?embedded=true" width="640" height="502" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+{% extends 'base.html' %}
+{% block title %}Тестування{% endblock %}
+{% block content %}
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 d-flex justify-content-center align-items-center">
+                <iframe src="{{ quiz_url }}" width="640" height="700" frameborder="0" marginheight="0" marginwidth="0">
+                    Loading…
+                </iframe>
+            </div>
+        </div>
+    </div>
+{% endblock content %}
