--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -10,20 +10,25 @@
                     <form method="post" action="{% url 'accounts:signup' %}"
                           class="d-flex justify-content-around align-items-center h-100 w-100 flex-column my-5">
                         {% csrf_token %}
+                    <div class="errors d-flex justify-content-center align-items-center w-100 flex-column text-center">
+                        {% for error in errors %}
+                        <div style="color:red">{{ error }}</div>
+                        {% endfor %}
+                    </div>
                         <div class="form-one">
                             <label for="email">
                                 E-mail
-                                <input name="email" value="" placeholder="E-mail" class="email-input">
+                                <input name="email" value="" placeholder="E-mail" class="email-input" type="email">
                             </label>
 
                             <label for="password1">
                                 Пароль
-                                <input name="password1" value="" placeholder="Пароль">
+                                <input name="password1" value="" placeholder="Пароль" type="password" class="password-input-one">
                             </label>
 
                             <label for="password2">
                                 Пароль
-                                <input name="password2" value="" placeholder="Пароль">
+                                <input name="password2" value="" placeholder="Пароль" type="password" class="password-input-two">
                             </label>
                             <button class="btn btn-blue mt-3 btn-email" type="button">Далі</button>
                         </div>
