--- a/accounts/static/accounts/style/main.css
+++ b/accounts/static/accounts/style/main.css
@@ -69,6 +69,15 @@ nav .nav-left {
     flex-direction: row;
 }
 
+nav .nav-right {
+    position: absolute;
+    right:5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
+
 .auth-btn {
     color:white;
     display: flex;
