--- a/templates/testing/news_detail.html
+++ b/templates/testing/news_detail.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-sm-12">
                 <div class="news">
-                    <a href="{% url 'testing:news_detail' news.slug %}"><h3>{{ news.title }}</h3></a>
+                    <a href="{% url 'testing:news-detail' news.slug %}"><h3>{{ news.title }}</h3></a>
                     <p>{{ news.text }}</p>
                 </div>
             </div>
