--- a/templates/testing/quiz_list.html
+++ b/templates/testing/quiz_list.html
@@ -26,7 +26,7 @@ select {
                 {% else %}
                     <p>Для Вас тестування ще недоступне.</p>
                 {% endif %}
-                <form action="{% url 'testing:available_tests' %}" method="post" class="form-grade">
+                <form action="{% url 'testing:available-tests' %}" method="post" class="form-grade">
                     {% csrf_token %}
                     <select name="grade" id="grade" class="select-grade">
                         {% for id, grade in grades %}
